cmake_minimum_required(VERSION 3.1)
project(hello-alembic)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(ALEMBIC_BUILD_LIBS     ON  CACHE INTERNAL "" FORCE)
set(ALEMBIC_LIB_USES_BOOST OFF CACHE INTERNAL "" FORCE)
set(ALEMBIC_LIB_USES_TR1   OFF CACHE INTERNAL "" FORCE)
set(ALEMBIC_SHARED_LIBS    ON  CACHE INTERNAL "" FORCE)
set(USE_ARNOLD             OFF CACHE INTERNAL "" FORCE)
set(USE_BINARIES           ON  CACHE INTERNAL "" FORCE)
set(USE_EXAMPLES           OFF CACHE INTERNAL "" FORCE)
set(USE_HDF5               OFF CACHE INTERNAL "" FORCE)
set(USE_MAYA               OFF CACHE INTERNAL "" FORCE)
set(USE_PRMAN              OFF CACHE INTERNAL "" FORCE)
set(USE_PYALEMBIC          OFF CACHE INTERNAL "" FORCE)
set(USE_STATIC_BOOST       OFF CACHE INTERNAL "" FORCE)
set(USE_STATIC_HDF5        OFF CACHE INTERNAL "" FORCE)
set(USE_TESTS              OFF CACHE INTERNAL "" FORCE)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/alembic)
target_include_directories(Alembic PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/external/alembic/lib>)

add_executable(minimum ${CMAKE_CURRENT_SOURCE_DIR}/src/minimum.cpp)
target_link_libraries(minimum Alembic)

add_executable(simple ${CMAKE_CURRENT_SOURCE_DIR}/src/simple.cpp)
target_link_libraries(simple Alembic)
